# wakezilla

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  build_support.rs  install.ps1  install.sh
.github/: FUNDING.yml
.github/workflows/: bootstrap-publish.yml  ci.yml  homebrew.yml  manual-release.yml  release.yml
Formula/: wakezilla.rb
assets/desktop/: Wakezilla.icns
common/: Cargo.toml
common/src/: lib.rs
common/tests/: api_models.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: api.rs  main.rs  models.rs
frontend/src/components/: error.rs  header.rs  home.rs  mod.rs
frontend/src/components/machines/: add.rs  detail.rs  mod.rs  registered.rs
frontend/style/: main.css
scripts/: test-install-linux-real.sh  test-install-ps1.ps1  test-install-sh.sh  test-linux-tray-session.sh  test-release-package.sh  test-windows-service-setup.ps1
scripts/release/: generate-desktop-icons.sh  generate_homebrew_formula.sh  package_archive.sh
scripts/windows/: uninstall-wakezilla.ps1
src/: access_log.rs  api_models.rs  cli.rs  client_server.rs  config.rs  forward.rs  lib.rs  main.rs  proxy_server.rs  scanner.rs  service.rs  setup.rs  shutdown_auth.rs  system.rs  tray.rs  tui.rs  update.rs  web.rs  wol.rs
src/tray/: desktop.rs
tests/: api_conversion_tests.rs  build_script_tests.rs  client_auth_tests.rs  config_tests.rs  desktop_assets.rs  forward_tests.rs  proxy_integration.rs  setup_tests.rs  shutdown_auth_tests.rs  tray_startup.rs  web_api_integration.rs  web_persistence.rs
tests/fixtures/install/: release-v0.1.49.json
